--- a/Uke37_if_og_for.ipynb
+++ b/Uke37_if_og_for.ipynb
@@ -337,7 +337,7 @@
    "source": [
     "# Nøkkelordet `in`\n",
     "\n",
-    "* `in` benyttes til å sjekke om en streng _(eller liste, tuple osv..)_ inneholder en gitt verdi (eller sekvens med verdier). \n",
+    "* `in` benyttes til å sjekke om en streng _(eller liste, array osv..)_ inneholder en gitt verdi (eller sekvens med verdier). \n",
     "* Kan benyttes for å bekrefte om en streng inneholder en spesifikk bokstav.\n",
     "\n",
     "__Lag et program for å finne ut om en bokstav er en vokal:__"
