--- a/Uke37_if_og_for.ipynb
+++ b/Uke37_if_og_for.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "\n",
     "* Emne INGA1002 - Programmering, Numerikk og Sikkerhet\n",
-    "* Onsdag 10. September 2024\n",
+    "* Onsdag 11. September 2024\n",
     "* Underviser: Kai Erik Hoff\n",
     "\n",
     "\n",
@@ -45,17 +45,6 @@
     }
    },
    "source": [
-    "* Forelesning neste onsdag blir 45 min programmering + 45 min numerikk intro"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
     "* Øving 4 er tilgjengelig\n",
     "    * Innleveringsfrist fredag 20. september"
    ]
@@ -70,6 +59,17 @@
    "source": [
     "* Flytting av øvingstime torsdag 12 . sept. 12:15 - 14:00 \n",
     "    - Ny lokasjon: G326 (kun denne uken)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Forelesning neste onsdag blir 45 min programmering + 45 min numerikk intro"
    ]
   },
   {
@@ -146,7 +146,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Betingelser\n",
     "\n",
@@ -177,27 +181,58 @@
     "* Skrive en funksjon som gir en bokstavkarakter (A, B, C, D, E eller F) avhengig av prosent uttelling på eksamen. Matematisk kan vi beskrive funksjonen $G(p)$ for å sette bokstavkarakter som:\n",
     "\n",
     "$$\n",
-    "    G(p) = \\begin{cases} A, & 89 \\leq p \\leq 100\\\\\n",
+    "    G(p) = \\begin{cases} A, & 89 \\leq p \\\\\n",
     "    B, &  77 \\leq p < 89\\\\\n",
     "    C, &  65 \\leq p < 77\\\\\n",
     "    D, &  53 \\leq p < 65\\\\\n",
     "    E, &  40 \\leq p < 53\\\\\n",
-    "    F, &  \\ \\ 0 \\leq p < 40 \\end{cases} $$"
+    "    F, &  \\ \\ \\ \\ \\ \\ \\ \\ \\ p < 40 \\end{cases} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G(poeng) = 'F'\n",
+      "G(poeng) = 'E'\n",
+      "G(poeng) = 'E'\n",
+      "G(poeng) = 'D'\n",
+      "G(poeng) = 'C'\n",
+      "G(poeng) = 'B'\n",
+      "G(poeng) = 'A'\n"
+     ]
+    }
+   ],
    "source": [
     "def G(p):\n",
-    "    \n",
-    "    return "
+    "    if p >= 89:\n",
+    "        karakter = \"A\"\n",
+    "    elif p >= 77:\n",
+    "        karakter = \"B\"\n",
+    "    elif p >= 65:\n",
+    "        karakter = \"C\"\n",
+    "    elif p >= 53:\n",
+    "        karakter = \"D\"\n",
+    "    elif p >= 40:\n",
+    "        karakter = \"E\"\n",
+    "    else: \n",
+    "        karakter = \"F\"\n",
+    "        \n",
+    "    return karakter\n",
+    "\n",
+    "# test funksjonen\n",
+    "test_poengsummer = [30, 40, 50, 60, 70, 80, 90]\n",
+    "for poeng in test_poengsummer:\n",
+    "    print(f\"{G(poeng) = }\")"
    ]
   },
   {
@@ -250,18 +285,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "i = 20\n",
-    "j = 8\n",
-    "N = 15\n",
-    "(i>=1 and i<=N) or (j>=1 and j<=N)"
+    "x = 100\n",
+    "not (5 <= x <= 10)"
    ]
   },
   {
@@ -301,16 +341,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ikke helg enda.\n"
+     ]
+    }
+   ],
    "source": [
-    "dag = \"lørdag\"\n",
-    "if (dag == \"lørdag\" or \"søndag\"):\n",
+    "dag = \"mandag\"\n",
+    "if (dag == \"lørdag\" or dag == \"søndag\"):\n",
+    "    print(\"Det er helg!\")\n",
+    "else:\n",
+    "    print(\"Ikke helg enda.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ikke helg enda.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dag = \"onsdag\"\n",
+    "if (dag in [\"lørdag\", \"søndag\"]):\n",
     "    print(\"Det er helg!\")\n",
     "else:\n",
     "    print(\"Ikke helg enda.\")"
@@ -337,7 +406,7 @@
    "source": [
     "# Nøkkelordet `in`\n",
     "\n",
-    "* `in` benyttes til å sjekke om en streng _(eller liste, array osv..)_ inneholder en gitt verdi (eller sekvens med verdier). \n",
+    "* `in` benyttes til å sjekke om en streng _(eller liste, tuple osv..)_ inneholder en gitt verdi (eller sekvens med verdier). \n",
     "* Kan benyttes for å bekrefte om en streng inneholder en spesifikk bokstav.\n",
     "\n",
     "__Lag et program for å finne ut om en bokstav er en vokal:__"
@@ -345,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -356,12 +425,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bokstaven er en vokal\n"
+      "Bokstaven er en konsonant\n"
      ]
     }
    ],
    "source": [
-    "bokstav = \"e\"\n",
+    "bokstav = \"k\"\n",
     "if bokstav in [\"a\",\"e\",\"i\",\"o\",\"u\",\"y\"]:\n",
     "    print(\"Bokstaven er en vokal\")\n",
     "else:\n",
@@ -398,53 +467,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": [
-    "def print_gangetabell(tall):\n",
-    "    print(\"Gangetabellen til\", tall, \"er:\")\n",
-    "    print(1, \"---\", tall*1)\n",
-    "    print(2, \"---\", tall*2)\n",
-    "    print(3, \"---\", tall*3)\n",
-    "    print(4, \"---\", tall*4)\n",
-    "    print(5, \"---\", tall*5)\n",
-    "    print(6, \"---\", tall*6)\n",
-    "    print(7, \"---\", tall*7)\n",
-    "    print(8, \"---\", tall*8)\n",
-    "    print(9, \"---\", tall*9)\n",
-    "    print(10, \"---\", tall*10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gangetabellen til 9 er:\n",
-      "1 --- 9\n",
-      "2 --- 18\n",
-      "3 --- 27\n",
-      "4 --- 36\n",
-      "5 --- 45\n",
-      "6 --- 54\n",
-      "7 --- 63\n",
-      "8 --- 72\n",
-      "9 --- 81\n",
-      "10 --- 90\n"
+      "Gangetabellen til 8 er:\n",
+      "1*tall = 8\n",
+      "2*tall = 16\n",
+      "3*tall = 24\n",
+      "4*tall = 32\n",
+      "5*tall = 40\n",
+      "6*tall = 48\n",
+      "7*tall = 56\n",
+      "8*tall = 64\n",
+      "9*tall = 72\n",
+      "10*tall = 80\n"
      ]
     }
    ],
    "source": [
-    "print_gangetabell(9)"
+    "def print_gangetabell(tall):\n",
+    "    print(\"Gangetabellen til\", tall, \"er:\")\n",
+    "    print(f\"{1*tall = }\")\n",
+    "    print(f\"{2*tall = }\")\n",
+    "    print(f\"{3*tall = }\")\n",
+    "    print(f\"{4*tall = }\")\n",
+    "    print(f\"{5*tall = }\")\n",
+    "    print(f\"{6*tall = }\")\n",
+    "    print(f\"{7*tall = }\")\n",
+    "    print(f\"{8*tall = }\")\n",
+    "    print(f\"{9*tall = }\")\n",
+    "    print(f\"{10*tall = }\")\n",
+    "    \n",
+    "print_gangetabell(8)\n",
+    "\n"
    ]
   },
   {
@@ -518,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -533,18 +596,22 @@
       "3\n",
       "5\n",
       "7\n",
-      "11\n"
+      "11\n",
+      "x_liste = [2, 3, 5, 7, 11]\n"
      ]
     }
    ],
    "source": [
-    "for x in [2, 3 ,5, 7, 11]:\n",
-    "    print(x)"
+    "x_liste = [2, 3, 5, 7, 11]\n",
+    "for x_verdi in x_liste:\n",
+    "    print(x_verdi)\n",
+    "    \n",
+    "print(f\"{x_liste = }\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -584,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -651,15 +718,121 @@
     "## Kodeeksempel 2:\n",
     "\n",
     "* Gitt en array `x` som input, lag en funksjon som skriver ut ut logaritmen (base 10) til samtlige tall med formateringen:\\\n",
-    "`log(__) er lik __`\n"
+    "`log(__) er lik __._`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log(1000.0) er lik 3.0\n",
+      "log(100.0) er lik 2.0\n",
+      "log(10.0) er lik 1.0\n",
+      "log(1.0) er lik 0.0\n",
+      "log(0.1) er lik -1.0\n",
+      "log(0.01) er lik -2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def print_log(x_array):\n",
+    "    for x_value in x_array:\n",
+    "        x_log = np.log10(x_value)\n",
+    "        print(f\"log({x_value}) er lik {x_log}\")\n",
+    "        \n",
+    "\n",
+    "x = np.array([1000, 100, 10, 1, 0.1, 0.01])\n",
+    "print_log(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"1200\" height=\"500\" frameborder=\"0\" src=\"https://pythontutor.com/iframe-embed.html#code=import%20math%20as%20m%0A%0Adef%20print_log%28x_array%29%3A%0A%20%20%20%20for%20x_value%20in%20x_array%3A%0A%20%20%20%20%20%20%20%20x_log%20%3D%20m.log10%28x_value%29%0A%20%20%20%20%20%20%20%20print%28f%22log%28%7Bx_value%7D%29%20er%20lik%20%7Bx_log%7D%22%29%0A%20%20%20%20%20%20%20%20%0A%0Ax%20%3D%20%5B1000,%20100,%2010,%201,%200.1,%200.01%5D%0Aprint_log%28x%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<iframe width=\"1200\" height=\"500\" frameborder=\"0\" src=\"https://pythontutor.com/iframe-embed.html#code=import%20math%20as%20m%0A%0Adef%20print_log%28x_array%29%3A%0A%20%20%20%20for%20x_value%20in%20x_array%3A%0A%20%20%20%20%20%20%20%20x_log%20%3D%20m.log10%28x_value%29%0A%20%20%20%20%20%20%20%20print%28f%22log%28%7Bx_value%7D%29%20er%20lik%20%7Bx_log%7D%22%29%0A%20%20%20%20%20%20%20%20%0A%0Ax%20%3D%20%5B1000,%20100,%2010,%201,%200.1,%200.01%5D%0Aprint_log%28x%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Kopiering av lister/arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1000, 100, 10, 1, 0.1, 0.01]\n",
+      "[0, 100, 10, 1, 0.1, 0.01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Funksjoner tar ikke inn en kopi av lister, men en referanse til kilden\n",
+    "def sett_starverdi_til_0(x_array):\n",
+    "    x_array[0] = 0\n",
+    "        \n",
+    "\n",
+    "x = [1000, 100, 10, 1, 0.1, 0.01]\n",
+    "print(x)\n",
+    "sett_starverdi_til_0(x)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1000, 100, 10, 1, 0.1, 0.01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1000, 100, 10, 1, 0.1, 0.01]\n",
+    "b = a.copy()\n",
+    "b[1] = -100\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "code",
@@ -712,13 +885,49 @@
    },
    "source": [
     "## Eksempel 3: \n",
-    "* Skriv ut tallene i en array som er negative."
+    "* Lag en funksjon som skriver ut de negative tallene i en liste `input_list`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overview of negative numbers in [-10, -5, 0, 5, 10]\n",
+      "-10\n",
+      "-5\n",
+      "Overview of negative numbers in [-10, -5, 0, 5, 10]\n",
+      "-10\n",
+      "-5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def print_negative_numbers(input_list):\n",
+    "    #input_list = [-10, -5, 0, 5, 10]\n",
+    "    print(f\"Overview of negative numbers in {input_list}\")\n",
+    "    for num in input_list:\n",
+    "        if num < 0:\n",
+    "            print(num)\n",
+    "            \n",
+    "print_negative_numbers([-10, -5, 0, 5, 10])\n",
+    "print_negative_numbers(np.arange(-100, 100))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -777,10 +986,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "x += 10\n",
+    "x"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -792,32 +1016,65 @@
    "source": [
     "## Kodeeksempel 4: regn ut gjennomsnitt.\n",
     "* Vi vil skrive en egne `sum`-funksjon som regner ut gjennomsnittet av en array/liste\n",
-    "* Sum skrives matematisk som:\n",
-    "$$\\sum_{n=0}^{N-1} x_n $$\n",
-    "    * For en tallsekvens $x_n$."
+    "* Gjennomsnitt skrives matematisk som:\n",
+    "$$\\begin{align}\n",
+    "\\bar{\\boldsymbol{x}_n} &= \\frac{1}{N}\\cdot \\sum_{n=0}^{N-1} x_n \\\\\n",
+    "&= x_0 + x_1 + \\ldots + x_{N-1}\n",
+    "\\end{align}$$\n",
+    "    * For en tallserie $\\boldsymbol{x}_n$ med lengde $N$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32"
+       "6.4"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def Avg(x):\n",
+    "def Avg(x_n):\n",
+    "    N = len(x_n)\n",
+    "    x_sum = 0\n",
+    "    for x_verdi in x_n:\n",
+    "        x_sum = x_sum + x_verdi\n",
+    "        \n",
+    "    x_avg = x_sum/N\n",
+    "    return x_avg\n",
     "    # Skriv kode her!\n",
     "\n",
     "Avg([4,2,6,8,12])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"1200\" height=\"500\" frameborder=\"0\" src=\"https://pythontutor.com/iframe-embed.html#code=def%20Avg%28x_n%29%3A%0A%20%20%20%20N%20%3D%20len%28x_n%29%0A%20%20%20%20x_sum%20%3D%200%0A%20%20%20%20for%20x_verdi%20in%20x_n%3A%0A%20%20%20%20%20%20%20%20x_sum%20%3D%20x_sum%20%2B%20x_verdi%0A%20%20%20%20%20%20%20%20%0A%20%20%20%20x_avg%20%3D%20x_sum/N%0A%20%20%20%20return%20x_avg%0A%20%20%20%20%23%20Skriv%20kode%20her!%0A%0AAvg%28%5B4,2,6,8,12%5D%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<iframe width=\"1200\" height=\"500\" frameborder=\"0\" src=\"https://pythontutor.com/iframe-embed.html#code=def%20Avg%28x_n%29%3A%0A%20%20%20%20N%20%3D%20len%28x_n%29%0A%20%20%20%20x_sum%20%3D%200%0A%20%20%20%20for%20x_verdi%20in%20x_n%3A%0A%20%20%20%20%20%20%20%20x_sum%20%3D%20x_sum%20%2B%20x_verdi%0A%20%20%20%20%20%20%20%20%0A%20%20%20%20x_avg%20%3D%20x_sum/N%0A%20%20%20%20return%20x_avg%0A%20%20%20%20%23%20Skriv%20kode%20her!%0A%0AAvg%28%5B4,2,6,8,12%5D%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>"
    ]
   },
   {
@@ -851,26 +1108,40 @@
     "range(til)            # tilsvarer [0, 1, 2,...,til-1]\n",
     "range(fra, til)       # tilsvaer [fra, fra+1,...,til-1]\n",
     "range(fra, til, steg) # tilsvarerr [fra, fra+steg,..., til-1]\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Kodeeksempel 5: numerisk integrasjon?"
+    "```\n",
+    "\n",
+    "### Alternativ gjennomsnittsutregning med `for i in range(N)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.4"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def Avg(x_n):\n",
+    "    N = len(x_n)\n",
+    "    x_sum = 0\n",
+    "    for i in range(N):\n",
+    "        x_sum = x_sum + x_n[i]\n",
+    "        \n",
+    "    x_avg = x_sum/N\n",
+    "    return x_avg\n",
+    "    # Skriv kode her!\n",
+    "\n",
+    "Avg([4,2,6,8,12])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -903,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1,
